# podra

./: .gitignore  LICENSE  README.md  kube-local.sh
.devcontainer/: Dockerfile  copy-kubeconfig.sh  devcontainer.json  install.sh
.storybook/: preview.js
airflow/: Dockerfile  requirements.txt
airflow/dags/: ingestor_dag.py  spark_dag.py  test_dag.py
beam/: README.md  go.mod  go.sum  kafka.go  tests.go  wordcount.go
chart/: .helmignore  Chart.yaml  README.md  k3d-cluster.yaml  values.schema.json  values.yaml
chart/charts/: kafka-13.1.4.tgz
chart/kubernetes/: cluster.yaml
chart/templates/: pv.yaml  pvc.yaml
ingestion/: .eslintrc  Dockerfile  package.json  tsconfig.json
ingestion/producers/: reddit.ts
ingestion/src/: index.ts  main.d.ts  reddit.ts  types.d.ts  utils.ts
kafka/: main.py  package-lock.json  package.json  tsconfig.json
kafka/producers/: reddit.js  reddit.ts
kubernetes/: configmaps.yaml
loader/: pom.xml
pwa/: .eslintcache  .eslintrc.js  .gitignore  .hygen.js  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pwa/.storybook/: main.js
pwa/config/: env.ts  getHttpsConfig.ts  modules.ts  paths.ts  pnpTs.ts  webpack.config.ts  webpackDevServer.config.ts
pwa/public/: chrome_ext.webmanifest  (+2 more)
scripts/: kube-local.sh
spark/: .sbtopts  .scalafix.conf  .scalafmt.conf  README.md  build.sbt  sbt.sbt  scalastyle-config.xml
sql/: ingestion.sql
streamer/: .rustfmt.toml  Cargo.toml  README.md
streamer/src/: arrow.rs  cdata.rs  csv.rs  example.rs  extension.rs  main.rs  metadata.rs  parquet.rs
(+175 files in other folders)
