[package]
name = "streamer"
version = "0.1.0"
authors = ["Tristan Schrader <9901294+schradert@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "^0.6.2", features = ["full"]}
crossbeam-channel = "^0.5.1"
rayon = "^1.5.1"